--- a/src/sow/sow.scss
+++ b/src/sow/sow.scss
@@ -8,6 +8,7 @@
             }
             i, span {
                 font-size: 16px;
+                vertical-align:middle;
             }
         }
         mat-ink-bar {
